Fixed z-align for mobile productmenu. Added productlist.

--- a/css/master.css
+++ b/css/master.css
@@ -1,16 +1,17 @@
 /* Tags */
 body{
   overflow-y: scroll;
+  background-color:#e9e9e9;
 }
 
 main{
   height:4000px; /* To see scrolling */
-  background: linear-gradient(#d12121, #9e1919);
+  background-color:#f4f4f4;
 }
 
 /* Classes */
 .navbar{
-  background-color: #e02323;
+  background-color:#e02323;
 }
 
 .dropdown-menu{
@@ -64,6 +65,18 @@ main{
   color:#ce2121;
 }
 
+.products-row{
+  background-color: #f4f4f4;
+}
+
+.products-row:hover{
+  background-color: #e5e5e5;
+}
+
+.products-description{
+  font-size: 14px;
+}
+
 /* ID's */
 
 #pageTitle{
@@ -89,6 +102,7 @@ main{
   right: 0;
   left: 0;
   min-height: 100%;
+  z-index:99;
 }
 
 #prodDropdown a{
